--- a/bots/templates/index.html
+++ b/bots/templates/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
@@ -6,13 +5,12 @@
   <div class="container">
     {% block body %}
     {% if error %}<p class="error"><strong>Error:</strong> {{ error }}{% endif %}
-    <a href="{{ auth_url }}" class="btn btn-link" target="_blank">Authorize with Twitter</a>
-    <form action="{{ url_for('authorize') }}" method="post">
-      <div class="form-group">
-        <label for="pin">Enter the Twitter PIN below:</label>
-        <input class="form-control" type="text" name="pin">
-      </div>
-      <button class="btn btn-default" type="submit">Authorize</button>
+    <form method="post">
+        <input type="submit" class="btn btn-danger" name="submit_button" value="STOP ALL JOBS">
+        <br>
+        <input type="submit" class="btn btn-warning" name="submit_button" value="RESTART ALL JOBS">
+        <br>
+        <input type="submit" class="btn btn-primary" name="submit_button" value="AUTHORIZE NEW CLIENT">
     </form>
     {% endblock %}
   </div>
