adding feature to check jobs

--- a/bots/templates/index.html
+++ b/bots/templates/index.html
@@ -10,6 +10,8 @@
         <br>
         <input type="submit" class="btn btn-warning" name="submit_button" value="RESTART ALL JOBS">
         <br>
+        <input type="submit" class="btn btn-info" name="submit_button" value="CURRENT JOBS">
+        <br>
         <input type="submit" class="btn btn-primary" name="submit_button" value="AUTHORIZE NEW CLIENT">
     </form>
     {% endblock %}
